<resources>
    <string name="app_name">Bake Aid</string>
    <string name="ingredients">Ingredients:</string>
    <string name="stepNo">Step %1$d: </string>
    <string name="previous_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="recipe_ingredients_widget_not_found_description">Recipe ingredients will be shown here once you open a recipe in the application.</string>
    <string name="playervideo_cd">playerVideo</string>
    <string name="no_video">No Video</string>
    <string name="no_internet_connection_error_text">No internet connection found. Please connect and try again.</string>
    <string name="refresh_button_text">Refresh</string>
</resources>
