<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/recipe_fragment_rl_padding">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/recipe_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="@dimen/error_text_view_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/error_text_view_margin_start"
        android:text="@string/no_internet_connection_error_text"
        android:textAlignment="center"
        android:textSize="@dimen/error_text_view_size"
        android:visibility="gone" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/refresh_button_margin_end"
        android:text="@string/refresh_button_text"
        android:textColor="@color/white"
        android:theme="@style/MyButton"
        android:visibility="gone" />


</RelativeLayout>