<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/recipe_step_ll_padding">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recipe_step_port_height"
        android:layout_gravity="center_horizontal"
        android:contentDescription="playerVideo" />

    <ImageView
        android:id="@+id/thumbNail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/stepDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recipe_description_margin"
        android:textSize="@dimen/recipe_description_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/recipe_buttons_ll_lh"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previousStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_step"
            android:textColor="@color/white"
            android:theme="@style/MyButton" />

        <Button
            android:id="@+id/nextStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:theme="@style/MyButton" />

    </LinearLayout>

</LinearLayout>