...

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/recipe_steps_rv_margin_bottom"
            android:layout_marginTop="@dimen/recipe_steps_rv_margin_top" />

    </LinearLayout>
...
